Fix visible pixel from skip-to-content background color; repair border radius on return top; unset changes in cagov after finding site css

--- a/src/public/ca_state_template/css/cagov.core.css
+++ b/src/public/ca_state_template/css/cagov.core.css
@@ -14900,7 +14900,7 @@ a.list-group-item {
   left: 50% !important;
   transform: translateX(-50%);
   clip: unset;
-  background-color: transparent;
+  background-color: white;
   border-radius: 0 0 7px 7px;
   overflow: hidden;
 }
